...
  String get failedToStartImport => 'Failed to start import. Please try again.';

  @override
  String get couldNotAccessFile => 'Could not access the selected file';

  @override
  String get askOmi => 'Ask Omi';

  @override
  String get done => 'Done';

  @override
  String get disconnected => 'Disconnected';
...
  @override
  String authAccessMessage(String appName) {
    return 'You\'ll need to authorize Omi to access your $appName data. This will open your browser for authentication.';
  }

  @override
  String get continueAction => 'Continue';

  @override
  String get languageTitle => 'Language';

  @override
  String get primaryLanguage => 'Primary Language';
...
  String get rateOnAppStore => 'Rate on App Store';

  @override
  String get rateOnGooglePlay => 'Rate on Google Play';

  @override
  String get maybeLater => 'Maybe Later';

  @override
  String get speechProfileIntro => 'Omi needs to learn your goals and your voice. You\'ll be able to modify it later.';

  @override
  String get getStarted => 'Get Started';
...
  String get speakTranscribeSummarize => 'Speak. Transcribe. Summarize.';

  @override
  String get signInWithApple => 'Sign in with Apple';

  @override
  String get signInWithGoogle => 'Sign in with Google';

  @override
  String get byContinuingAgree => 'By continuing, you agree to our ';

  @override
  String get termsOfUse => 'Terms of Use';
...
